--- a/assets/style.css
+++ b/assets/style.css
@@ -278,14 +278,19 @@ input[type="submit"] {
 		height: auto;
 	}
 	.picture.left::before {
-		width: 100%;
-		height: 30%;
-		position: absolute;
-		bottom: auto;
-		top: 0;
-		left: 0;
-		z-index: -1;
+		width: auto;
+		height: 150px;
 	}
+
+	#presentation {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		background-color: #F6D2B8;
+		padding-inline: 100px;
+		padding-block: 100px;
+	}
+
 	.about-me__title{
 		text-align: center;
 		margin-top: 1em;
@@ -344,6 +349,17 @@ input[type="submit"] {
 		padding-block: 1em;
 		text-align: center;
 	}
+
+	#presentation {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		background-color: #F6D2B8;
+		padding-inline: 30px;
+		padding-block: 30px;
+		position: relative;
+	}
+
 	.picture.left::before, .picture.right::before {
 		width: auto;
 		height: 150px;
