--- a/assets/style.css
+++ b/assets/style.css
@@ -142,17 +142,19 @@ article {
 
 .quote {
 	font-family: 'Spectral';
-	font-style: italic;
+	/*font-style: italic;*/
 	width: 70%;
 	margin: auto;
 	padding-block: 3em;
 }
+
 .quote__text {
 	font-family: Spectral;
 	font-style: italic;
 	font-weight: 300;
-
+	font-size: 22pt;
 }
+
 .quote__author {
 	font-family: Spectral;
 	font-weight: 800;
@@ -207,6 +209,12 @@ article {
 #contact .container {
 	display: flex;
 }
+
+#question {
+	font:'Spectral';
+	font-size: 26pt;
+}
+
 .picture.right::before {
 	content: ' ';
 	background-color: #BEB45A;
