--- a/assets/style.css
+++ b/assets/style.css
@@ -206,8 +206,14 @@ article {
 	padding-block: 100px;
 }
 
-#contact .container {
+.form-container {
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+}
+
+#form-column1 {
 	display: flex;
+	flex-direction: column;
 }
 
 #question {
@@ -225,10 +231,7 @@ article {
 	right: 0;
 	z-index: -1;
 }
-.form-container {
-	flex : 2;
 
-}
 form {
 	display: flex;
 	flex-direction: column;
@@ -257,6 +260,8 @@ input[type="submit"] {
 	background-color: #BEB45A;
 	padding: .5em 1em
 }
+
+/*
 
 @media all and (max-width: 1180px) {
 	.picture {
@@ -341,7 +346,7 @@ input[type="submit"] {
 		right: 0;
 		z-index: -1;
 	}
-}
+}*/
 
 @media all and (max-width: 650px) {
 	.top-header {
@@ -369,25 +374,50 @@ input[type="submit"] {
 	}
 
 	.picture.left::before, .picture.right::before {
-		width: auto;
-		height: 150px;
+		width: 70%;
+		height: auto;
 	}
-	#services .container {
+
+	.about-me__title {
+		display: flex;
 		align-items: center;
 	}
-	.service {
-		max-width: 90%;
+	.form-container {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 	}
+
+	#form-column1 {
+		display: flex;
+		flex-direction: column;
+	}
+
+	form {
+		width: 100%;
+	}
+
+	.service {
+		width: 300px;
+		margin: 20px;
+	}
+
+	.service__description{
+		margin-bottom: 1em;
+	}
+
 	#about, #contact {
 		padding-inline: 2em;
 		padding-block: 2em;
 	}
-	form {
+
+	/*form {
 		width: 100%;
-	}
-	.picture {
-		width: 80%;
-		height: auto;
+	}*/
+
+	#question {
+		font:'Spectral';
+		font-size: 18pt;
 	}
 }
 
