ajout width et height sur images et corrections code html et css

--- a/assets/style.css
+++ b/assets/style.css
@@ -50,7 +50,10 @@ article {
 	padding-block: 100px;
 	position: relative;
 }
-
+img {
+	height: auto;
+	width: 100%;
+  }
 .picture.left::before {
 	content: ' ';
 	background-color: #E5975F;
