--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,8 @@
+/* le bon fichier */
+
+/* changer tailler max */
+
 body {
-	max-width: 1920px;
 	margin: auto;
 }
 
@@ -7,262 +10,552 @@ body {
 	font-family: 'Inter';
 	font-style: normal;
 }
-.top-header {
-	background-color: white;
-	position: sticky;
-	top:0;
-	z-index: 1000;
-	display: flex;
-	justify-content: space-between;
-	padding-inline: 100px;
-	padding-block: 30px;
-	align-items: center;
-}
 
-.top-header .name {
-	font-size: 26px;
-}
-
-.nav ul {
-	display: flex;
-	list-style-type: none;
-	font-size: 14px;
-	margin-bottom: 0;
-}
-
-.nav li {
-	padding-inline: 10px;
-}
-
-.nav a {
-	text-decoration: none;
-	color: #000
-}
-
-.social-link img {
-	width: 20px;
-}
-
-article {
-	display: flex;
-	background-color: #F6D2B8;
-	padding-inline: 100px;
-	padding-block: 100px;
-	position: relative;
-}
 img {
 	height: auto;
 	width: 100%;
-  }
-.picture.left::before {
-	content: ' ';
-	background-color: #E5975F;
-	width: 374px;
-	height: 329px;
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	z-index: -1;
 }
 
-.picture {
-	flex: 1;
-	margin: 0 20px;
-	z-index: 0;
+@media screen and (min-width: 768px) and (max-width: 1920px) {
+
+	.top-header {
+		background-color: white;
+		position: sticky;
+		top:0;
+		z-index: 1000;
+		display: flex;
+		justify-content: space-between;
+		padding-inline: 100px;
+		padding-block: 30px;
+		align-items: center;
+	}
+	
+	h1 {
+		font-size: 26px;
+	}
+	
+	header .nav ul {
+		display: flex;
+		list-style-type: none;
+		font-size: 14px;
+		margin-bottom: 0;
+	}
+	
+	header .nav li {
+		padding-inline: 10px;
+	}
+	
+	header .nav a {
+		text-decoration: none;
+		color: #000
+	}
+	
+	.social-link img {
+		width: 20px;
+	}
+	
+	#presentation {
+		display: flex;
+		flex-direction: row;
+		background-color: #F6D2B8;
+		padding-inline: 100px;
+		padding-block: 100px;
+		position: relative;
+	}
+
+	.picture.left::before {
+		content: ' ';
+		background-color: #E5975F;
+		width: 374px;
+		height: 329px;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		z-index: -1;
+	}
+	
+	.picture {
+		flex: 1;
+		margin: 0 20px;
+		z-index: 0;
+	}
+	
+	.picture img {
+		width: 100%;
+		height: auto;
+	}
+
+	#about-me {
+		flex: 2;
+		margin: 30px;
+	}
+
+	#about-me__introduction {
+		font-family: 'Spectral';
+		font-weight: 800;
+		font-style: italic;
+		width: 100%;
+	}
+
+	#about-me p {
+		width: 100%;
+		font-size: 14px;
+	}
+	
+	#gallery {
+		margin-left: 75px;
+		margin-right: 75px;
+	}
+	
+	.title{
+		text-align: center;
+		padding-block: 2em;
+	}
+
+	.gallery .nav {
+		justify-content: center;
+	}
+
+	.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+		color: #000;
+		background-color: #BEB45A;
+		border-radius:0 ;
+	}
+
+	.nav-pills .nav-link {
+		color: #000
+	}
+
+	.item-column {
+		position: relative;
+		margin-bottom: 0 !important;
+		padding: 0;
+	}
+
+	.item-column::after{
+		content: "";
+		display: block;
+		padding-bottom: 100%;
+	
+	}
+
+	.gallery-item {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		padding: .5em;
+	}
+
+	.mg-prev, .mg-next {
+		width: 30px;
+		height: 30px;
+		border-radius: 00%;
+		justify-content: center;
+		align-items: center;
+		display: flex;
+		font-size: 24px;
+	}
+	
+	.quote {
+		font-family: 'Spectral';
+		/*font-style: italic;*/
+		width: 70%;
+		margin: auto;
+		padding-block: 3em;
+	}
+	
+	.quote__text {
+		font-family: Spectral;
+		font-style: italic;
+		font-weight: 300;
+		font-size: 22pt;
+	}
+	
+	.quote__author {
+		font-family: Spectral;
+		font-weight: 800;
+		font-size: 22px;
+	}
+	
+	#services {
+		margin: auto;
+		background-color: #A8D5D8 ;
+		position: relative;
+	}
+
+	#services .container::before{
+		content: ' ';
+		background-color: #1C6474;
+		position: absolute;
+		width: 100%;
+		height: 30%;
+		bottom: 0;
+		left: 0;
+		z-index: 0;
+	}
+	
+	#services .container {
+		justify-content: space-between;
+		display: flex;
+		padding : 2em 0;
+		padding-left: 70px;
+		padding-right: 70px;
+	}
+	
+	.service {
+		background-color: white;
+		max-width: 390px;
+		width: 30%;
+		height: 337px;
+		padding: 1em;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		z-index: 1;
+	}
+	
+	#contact {
+		margin: auto;
+		background-color: #D8D3A8 ;
+		position: relative;
+		padding-inline: 100px;
+		padding-block: 100px;
+	}
+	
+	.form-container {
+		display: grid;
+		grid-template-columns: 2fr 1fr;
+	}
+	
+	#form-column1 {
+		display: flex;
+		flex-direction: column;
+	}
+	
+	#question {
+		font:'Spectral';
+		font-size: 26pt;
+	}
+	
+	.picture.right::before {
+		content: ' ';
+		background-color: #BEB45A;
+		width: 374px;
+		height: 329px;
+		position: absolute;
+		bottom: 0;
+		right: 0;
+		z-index: -1;
+	}
+	
+	form {
+		display: flex;
+		flex-direction: column;
+		width: 70%;
+		align-items: flex-start;
+	}
+	
+	form input {
+		width: 100%;
+		background-color: transparent;
+		border: solid 1px;
+		height: 2.5em;
+		margin-bottom: 20px;
+	}
+	
+	form textarea {
+		width: 100%;
+		background-color: transparent;
+		border: solid 1px;
+		height: 5em;
+		line-height: 2.5em;
+		font-size: 1.2em;
+		margin-bottom: 20px;
+	}
+	
+	input[type="submit"] {
+		background-color: #BEB45A;
+		padding: .5em 1em
+	}
 }
 
-.picture img {
-	width: 100%;
-	height: auto;
-}
-#about-me {
-	flex: 2
-}
-.about-me__title {
-	margin-top: 1em;
-	margin-bottom: 60px;
-	font-size: 30px;
-}
-.about-me__introduction {
-	font-family: 'Spectral';
-	font-weight: 800;
-	font-style: italic;
-	width: 60%;
-}
-#about-me p {
-	width: 80%;
-	font-size: 14px;
+/*@media screen and (min-width: 768px) and (max-width: 991px) {}*/
+
+@media screen and (max-width: 767px) {
+
+	.top-header {
+		flex-direction: column;
+		padding-inline: 0;
+	}
+
+	h1 {
+		font-size: 26px;
+		margin: 30px;
+		text-align: center;
+	}
+
+	header .nav {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+	}
+
+	header .nav ul {
+		display: flex;
+		align-items: center;
+		list-style-type: none;
+		font-size: 14px;
+		margin-bottom: 0;
+		width: 100%;
+		padding: 0 0 0 0;
+	}
+	
+	header .nav li {
+		padding-inline: 10px;
+		flex: 1;
+		padding-block: 1em;
+		text-align: center;
+	}
+	
+	header .nav a {
+		text-decoration: none;
+		color: #000
+	}
+	
+	.social-link img {
+		width: 20px;
+	}
+
+	#presentation {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		background-color: #F6D2B8;
+		padding-inline: 30px;
+		padding-block: 30px;
+		position: relative;
+	}
+
+	#about-me {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+		margin: 30px;
+	}
+
+	.picture.left::before, .picture.right::before {
+		width: 70%;
+		height: auto;
+	}
+
+	#about-me__introduction {
+		font-family: 'Spectral';
+		font-weight: 800;
+		font-style: italic;
+		width: 100%;
+	}
+
+	#about-me p {
+		width: 100%;
+		font-size: 14px;
+	}
+
+	#gallery {
+		margin-left: 5px;
+		margin-right: 5px;
+	}
+	
+	.title{
+		text-align: center;
+		padding-block: 2em;
+	}
+
+	.gallery .nav {
+		justify-content: center;
+	}
+
+	.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+		color: #000;
+		background-color: #BEB45A;
+		border-radius:0 ;
+	}
+
+	.nav-pills .nav-link {
+		color: #000;
+	}
+
+	.item-column {
+		position: relative;
+		margin-bottom: 0 !important;
+		padding: 0;
+	}
+
+	.item-column::after{
+		content: "";
+		display: block;
+		padding-bottom: 100%;
+	}
+
+	.gallery-item {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		padding: .5em;
+	}
+
+	.mg-prev, .mg-next {
+		width: 30px;
+		height: 30px;
+		border-radius: 00%;
+		justify-content: center;
+		align-items: center;
+		display: flex;
+		font-size: 24px;
+	}
+
+	.quote {
+		font-family: 'Spectral';
+		/*font-style: italic;*/
+		width: 70%;
+		margin: auto;
+		padding-block: 3em;
+	}
+	
+	.quote__text {
+		font-family: Spectral;
+		font-style: italic;
+		font-weight: 300;
+		font-size: 22pt;
+	}
+	
+	.quote__author {
+		font-family: Spectral;
+		font-weight: 800;
+		font-size: 22px;
+	}
+
+	#services {
+		margin: auto;
+		background-color: #A8D5D8 ;
+		position: relative;
+	}
+
+	/*#services .container::before{
+		content: ' ';
+		position: absolute;
+		width: 100%;
+		height: 30%;
+		bottom: 0;
+		left: 0;
+		z-index: 0;
+	}*/
+	
+	#services .container {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		align-items: center;
+		background-color: #1C6474;
+		padding : 2em 0;
+		padding-left: 5px;
+		padding-right: 5px;
+	}
+	
+	.service {
+		background-color: white;
+		/*max-width: 390px;*/
+		width: 300px;
+		height: auto;
+		padding: 1em;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		margin: 20px;
+		z-index: 1;
+	}
+ /*
+	.service {
+		width: 300px;
+
+	}*/
+
+	.service__description{
+		margin-bottom: 1em;
+	}
+
+	#contact {
+		margin: auto;
+		background-color: #D8D3A8 ;
+		position: relative;
+		/*padding-inline: 100px;
+		padding-block: 100px;*/
+		padding-inline: 2em;
+		padding-block: 2em;
+	}
+
+	.form-container {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
+	#form-column1 {
+		display: flex;
+		flex-direction: column;
+	}
+
+	#question {
+		font:'Spectral';
+		font-size: 18pt;
+	}
+
+	.picture.right::before {
+		width: 70%;
+		height: auto;
+	}
+
+	form {
+		width: 100%;
+	}
+
+	form input {
+		width: 100%;
+		background-color: transparent;
+		border: solid 1px;
+		height: 2.5em;
+		margin-bottom: 20px;
+	}
+	
+	form textarea {
+		width: 100%;
+		background-color: transparent;
+		border: solid 1px;
+		height: 5em;
+		line-height: 2.5em;
+		font-size: 1.2em;
+		margin-bottom: 20px;
+	}
+	
+	input[type="submit"] {
+		background-color: #BEB45A;
+		padding: .5em 1em
+	}
+
+
+
+	/*form {
+		width: 100%;
+	}*/
+
+
 }
 
 
-#gallery {
-	margin-left: 75px;
-	margin-right: 75px;
-}
 
-.title{
-	text-align: center;
-	padding-block: 2em;
-}
-.gallery .nav {
-	justify-content: center;
-}
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #000;
-	background-color: #BEB45A;
-	border-radius:0 ;
-}
-.nav-pills .nav-link {
-	color: #000
-}
-.item-column {
-	position: relative;
-	margin-bottom: 0 !important;
-	padding: 0;
-}
-.item-column::after{
-	content: "";
-	display: block;
-	padding-bottom: 100%;
 
-}
-.gallery-item {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	padding: .5em;
-}
-.mg-prev, .mg-next {
-	width: 30px;
-	height: 30px;
-	border-radius: 00%;
-	justify-content: center;
-	align-items: center;
-	display: flex;
-	font-size: 24px;
-}
 
-.quote {
-	font-family: 'Spectral';
-	/*font-style: italic;*/
-	width: 70%;
-	margin: auto;
-	padding-block: 3em;
-}
-
-.quote__text {
-	font-family: Spectral;
-	font-style: italic;
-	font-weight: 300;
-	font-size: 22pt;
-}
-
-.quote__author {
-	font-family: Spectral;
-	font-weight: 800;
-	font-size: 22px;
-}
-
-#services {
-	margin: auto;
-	background-color: #A8D5D8 ;
-	position: relative;
-}
-#services .container::before{
-	content: ' ';
-	background-color: #1C6474;
-	position: absolute;
-	width: 100%;
-	height: 30%;
-	bottom: 0;
-	left: 0;
-	z-index: 0;
-
-}
-
-#services .container {
-	justify-content: space-between;
-	display: flex;
-	padding : 2em 0;
-	padding-left: 70px;
-	padding-right: 70px;
-}
-
-.service {
-	background-color: white;
-	max-width: 390px;
-	width: 30%;
-	height: 337px;
-	padding: 1em;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	z-index: 1;
-}
-
-#contact {
-	margin: auto;
-	background-color: #D8D3A8 ;
-	position: relative;
-	padding-inline: 100px;
-	padding-block: 100px;
-}
-
-.form-container {
-	display: grid;
-	grid-template-columns: 2fr 1fr;
-}
-
-#form-column1 {
-	display: flex;
-	flex-direction: column;
-}
-
-#question {
-	font:'Spectral';
-	font-size: 26pt;
-}
-
-.picture.right::before {
-	content: ' ';
-	background-color: #BEB45A;
-	width: 374px;
-	height: 329px;
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	z-index: -1;
-}
-
-form {
-	display: flex;
-	flex-direction: column;
-	width: 70%;
-	align-items: flex-start;
-}
-
-form input {
-	width: 100%;
-	background-color: transparent;
-	border: solid 1px;
-	height: 2.5em;
-	margin-bottom: 20px;
-}
-
-form textarea {
-	width: 100%;
-	background-color: transparent;
-	border: solid 1px;
-	height: 5em;
-	line-height: 2.5em;
-	font-size: 1.2em;
-	margin-bottom: 20px;
-}
-input[type="submit"] {
-	background-color: #BEB45A;
-	padding: .5em 1em
-}
 
 /*
 
@@ -352,75 +645,6 @@ input[type="submit"] {
 }*/
 
 @media all and (max-width: 650px) {
-	.top-header {
-		flex-direction: column;
-		padding-inline: 0;
-	}
-	.top-header .nav, .top-header .nav ul {
-		width: 100%;
-		padding: 0 0 0 0;
-	}
-	.top-header .nav li {
-		flex: 1;
-		padding-block: 1em;
-		text-align: center;
-	}
-
-	#presentation {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		background-color: #F6D2B8;
-		padding-inline: 30px;
-		padding-block: 30px;
-		position: relative;
-	}
-
-	.picture.left::before, .picture.right::before {
-		width: 70%;
-		height: auto;
-	}
-
-	.about-me__title {
-		display: flex;
-		align-items: center;
-	}
-	.form-container {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-	}
-
-	#form-column1 {
-		display: flex;
-		flex-direction: column;
-	}
-
-	form {
-		width: 100%;
-	}
-
-	.service {
-		width: 300px;
-		margin: 20px;
-	}
-
-	.service__description{
-		margin-bottom: 1em;
-	}
-
-	#about, #contact {
-		padding-inline: 2em;
-		padding-block: 2em;
-	}
-
-	/*form {
-		width: 100%;
-	}*/
-
-	#question {
-		font:'Spectral';
-		font-size: 18pt;
-	}
+	
 }
 
