--- a/assets/style.css
+++ b/assets/style.css
@@ -351,6 +351,7 @@ img {
 	.picture {
 		width: 50%;
 		height: auto;
+		margin: 40px;
 	}
 
 	#about-me__introduction {
@@ -447,22 +448,22 @@ img {
 		position: relative;
 	}
 
-	/*#services .container::before{
+ 	#services .container::before {
 		content: ' ';
 		position: absolute;
-		width: 100%;
-		height: 30%;
+		background-color: #1C6474;
+		width: 30%;
+		height: 100%;
 		bottom: 0;
-		left: 0;
+		left: 70%;
 		z-index: 0;
-	}*/
+	}
 	
 	#services .container {
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
 		align-items: center;
-		background-color: #1C6474;
 		padding : 2em 0;
 		padding-left: 5px;
 		padding-right: 5px;
@@ -471,7 +472,7 @@ img {
 	.service {
 		background-color: white;
 		/*max-width: 390px;*/
-		width: 300px;
+		width: 80%;
 		height: auto;
 		padding: 1em;
 		display: flex;
@@ -710,22 +711,22 @@ img {
 		position: relative;
 	}
 
-	/*#services .container::before{
+	#services .container::before{
 		content: ' ';
 		position: absolute;
-		width: 100%;
-		height: 30%;
+		background-color: #1C6474;
+		width: 30%;
+		height: 100%;
 		bottom: 0;
-		left: 0;
+		left: 70%;
 		z-index: 0;
-	}*/
+	}
 	
 	#services .container {
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
 		align-items: center;
-		background-color: #1C6474;
 		padding : 2em 0;
 		padding-left: 5px;
 		padding-right: 5px;
@@ -734,7 +735,7 @@ img {
 	.service {
 		background-color: white;
 		/*max-width: 390px;*/
-		width: 300px;
+		width: 80%;
 		height: auto;
 		padding: 1em;
 		display: flex;
