--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,3 @@
-/* le bon fichier */
-
-/* changer tailler max */
-
 body {
 	margin: auto;
 }
@@ -14,6 +10,119 @@ body {
 img {
 	height: auto;
 	width: 100%;
+}
+
+header .nav a {
+	text-decoration: none;
+	color: #000
+}
+
+.social-link img {
+	width: 20px;
+}
+
+.title{
+	text-align: center;
+	padding-block: 2em;
+}
+
+.gallery .nav {
+	justify-content: center;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+	color: #000;
+	background-color: #BEB45A;
+	border-radius:0 ;
+}
+
+.nav-pills .nav-link {
+	color: #000
+}
+
+.item-column {
+	position: relative;
+	margin-bottom: 0 !important;
+	padding: 0;
+}
+
+.item-column::after{
+	content: "";
+	display: block;
+	padding-bottom: 100%;
+
+}
+
+.gallery-item {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	padding: .5em;
+}
+
+.mg-prev, .mg-next {
+	width: 30px;
+	height: 30px;
+	border-radius: 00%;
+	justify-content: center;
+	align-items: center;
+	display: flex;
+	font-size: 24px;
+}
+
+.quote {
+	font-family: 'Spectral';
+	width: 70%;
+	margin: auto;
+	padding-block: 3em;
+}
+
+.quote__text {
+	font-family: Spectral;
+	font-style: italic;
+	font-weight: 300;
+	font-size: 22pt;
+}
+
+.quote__author {
+	font-family: Spectral;
+	font-weight: 800;
+	font-size: 22px;
+}
+
+#services {
+	margin: auto;
+	background-color: #A8D5D8 ;
+	position: relative;
+}
+
+#form-column1 {
+	display: flex;
+	flex-direction: column;
+}
+
+form input {
+	width: 100%;
+	background-color: transparent;
+	border: solid 1px;
+	height: 2.5em;
+	margin-bottom: 20px;
+}
+
+form textarea {
+	width: 100%;
+	background-color: transparent;
+	border: solid 1px;
+	height: 5em;
+	line-height: 2.5em;
+	font-size: 1.2em;
+	margin-bottom: 20px;
+}
+
+input[type="submit"] {
+	background-color: #BEB45A;
+	padding: .5em 1em
 }
 
 @media screen and (min-width: 992px) and (max-width: 1920px) {
@@ -37,21 +146,12 @@ img {
 	header .nav ul {
 		display: flex;
 		list-style-type: none;
-		font-size: 14px;
+		font-size: 10pt;
 		margin-bottom: 0;
 	}
 	
 	header .nav li {
 		padding-inline: 10px;
-	}
-	
-	header .nav a {
-		text-decoration: none;
-		color: #000
-	}
-	
-	.social-link img {
-		width: 20px;
 	}
 	
 	#presentation {
@@ -106,83 +206,6 @@ img {
 		margin-left: 75px;
 		margin-right: 75px;
 	}
-	
-	.title{
-		text-align: center;
-		padding-block: 2em;
-	}
-
-	.gallery .nav {
-		justify-content: center;
-	}
-
-	.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-		color: #000;
-		background-color: #BEB45A;
-		border-radius:0 ;
-	}
-
-	.nav-pills .nav-link {
-		color: #000
-	}
-
-	.item-column {
-		position: relative;
-		margin-bottom: 0 !important;
-		padding: 0;
-	}
-
-	.item-column::after{
-		content: "";
-		display: block;
-		padding-bottom: 100%;
-	
-	}
-
-	.gallery-item {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-		padding: .5em;
-	}
-
-	.mg-prev, .mg-next {
-		width: 30px;
-		height: 30px;
-		border-radius: 00%;
-		justify-content: center;
-		align-items: center;
-		display: flex;
-		font-size: 24px;
-	}
-	
-	.quote {
-		font-family: 'Spectral';
-		/*font-style: italic;*/
-		width: 70%;
-		margin: auto;
-		padding-block: 3em;
-	}
-	
-	.quote__text {
-		font-family: Spectral;
-		font-style: italic;
-		font-weight: 300;
-		font-size: 22pt;
-	}
-	
-	.quote__author {
-		font-family: Spectral;
-		font-weight: 800;
-		font-size: 22px;
-	}
-	
-	#services {
-		margin: auto;
-		background-color: #A8D5D8 ;
-		position: relative;
-	}
 
 	#services .container::before{
 		content: ' ';
@@ -228,11 +251,6 @@ img {
 		grid-template-columns: 2fr 1fr;
 	}
 	
-	#form-column1 {
-		display: flex;
-		flex-direction: column;
-	}
-	
 	#question {
 		font:'Spectral';
 		font-size: 26pt;
@@ -263,21 +281,6 @@ img {
 		height: 2.5em;
 		margin-bottom: 20px;
 	}
-	
-	form textarea {
-		width: 100%;
-		background-color: transparent;
-		border: solid 1px;
-		height: 5em;
-		line-height: 2.5em;
-		font-size: 1.2em;
-		margin-bottom: 20px;
-	}
-	
-	input[type="submit"] {
-		background-color: #BEB45A;
-		padding: .5em 1em
-	}
 }
 
 @media screen and (min-width: 651px) and (max-width: 991px) {
@@ -302,21 +305,12 @@ img {
 	header .nav ul {
 		display: flex;
 		list-style-type: none;
-		font-size: 14px;
+		font-size: 10pt;
 		margin-bottom: 0;
 	}
 	
 	header .nav li {
 		padding-inline: 10px;
-	}
-	
-	header .nav a {
-		text-decoration: none;
-		color: #000
-	}
-	
-	.social-link img {
-		width: 20px;
 	}
 
 	#presentation {
@@ -370,83 +364,6 @@ img {
 		margin-left: 50px;
 		margin-right: 50px;
 	}
-	
-	.title{
-		text-align: center;
-		padding-block: 2em;
-	}
-
-	.gallery .nav {
-		justify-content: center;
-	}
-
-	.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-		color: #000;
-		background-color: #BEB45A;
-		border-radius:0 ;
-	}
-
-	.nav-pills .nav-link {
-		color: #000
-	}
-
-	.item-column {
-		position: relative;
-		margin-bottom: 0 !important;
-		padding: 0;
-	}
-
-	.item-column::after{
-		content: "";
-		display: block;
-		padding-bottom: 100%;
-	
-	}
-
-	.gallery-item {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-		padding: .5em;
-	}
-
-	.mg-prev, .mg-next {
-		width: 30px;
-		height: 30px;
-		border-radius: 00%;
-		justify-content: center;
-		align-items: center;
-		display: flex;
-		font-size: 24px;
-	}
-	
-	.quote {
-		font-family: 'Spectral';
-		/*font-style: italic;*/
-		width: 70%;
-		margin: auto;
-		padding-block: 3em;
-	}
-	
-	.quote__text {
-		font-family: Spectral;
-		font-style: italic;
-		font-weight: 300;
-		font-size: 22pt;
-	}
-	
-	.quote__author {
-		font-family: Spectral;
-		font-weight: 800;
-		font-size: 22px;
-	}
-
-	#services {
-		margin: auto;
-		background-color: #A8D5D8 ;
-		position: relative;
-	}
 
  	#services .container::before {
 		content: ' ';
@@ -481,11 +398,6 @@ img {
 		margin: 20px;
 		z-index: 1;
 	}
- /*
-	.service {
-		width: 300px;
-
-	}*/
 
 	.service__description{
 		margin-bottom: 1em;
@@ -495,8 +407,6 @@ img {
 		margin: auto;
 		background-color: #D8D3A8 ;
 		position: relative;
-		/*padding-inline: 100px;
-		padding-block: 100px;*/
 		padding-inline: 2em;
 		padding-block: 2em;
 	}
@@ -505,11 +415,6 @@ img {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-	}
-
-	#form-column1 {
-		display: flex;
-		flex-direction: column;
 	}
 
 	#question {
@@ -524,29 +429,6 @@ img {
 
 	form {
 		width: 100%;
-	}
-
-	form input {
-		width: 100%;
-		background-color: transparent;
-		border: solid 1px;
-		height: 2.5em;
-		margin-bottom: 20px;
-	}
-	
-	form textarea {
-		width: 100%;
-		background-color: transparent;
-		border: solid 1px;
-		height: 5em;
-		line-height: 2.5em;
-		font-size: 1.2em;
-		margin-bottom: 20px;
-	}
-	
-	input[type="submit"] {
-		background-color: #BEB45A;
-		padding: .5em 1em
 	}
 }
 
@@ -571,28 +453,17 @@ img {
 
 	header .nav ul {
 		display: flex;
-		align-items: center;
-		list-style-type: none;
-		font-size: 14px;
-		margin-bottom: 0;
-		width: 100%;
-		padding: 0 0 0 0;
+		flex-direction: row;
+		justify-content: space-between;
+		list-style: none;
+		margin: 0;
+		padding: 0;
+		font-size: 12pt;
 	}
 	
 	header .nav li {
-		padding-inline: 10px;
-		flex: 1;
-		padding-block: 1em;
-		text-align: center;
-	}
-	
-	header .nav a {
-		text-decoration: none;
-		color: #000
-	}
-	
-	.social-link img {
-		width: 20px;
+		margin: 0;
+		padding: 20px;
 	}
 
 	#presentation {
@@ -634,81 +505,12 @@ img {
 		margin-left: 5px;
 		margin-right: 5px;
 	}
-	
-	.title{
-		text-align: center;
-		padding-block: 2em;
-	}
-
-	.gallery .nav {
-		justify-content: center;
-	}
-
-	.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-		color: #000;
-		background-color: #BEB45A;
-		border-radius:0 ;
-	}
-
-	.nav-pills .nav-link {
-		color: #000;
-	}
-
-	.item-column {
-		position: relative;
-		margin-bottom: 0 !important;
-		padding: 0;
-	}
-
-	.item-column::after{
-		content: "";
-		display: block;
-		padding-bottom: 100%;
-	}
-
-	.gallery-item {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-		padding: .5em;
-	}
-
-	.mg-prev, .mg-next {
-		width: 30px;
-		height: 30px;
-		border-radius: 00%;
-		justify-content: center;
-		align-items: center;
-		display: flex;
-		font-size: 24px;
-	}
 
 	.quote {
 		font-family: 'Spectral';
-		/*font-style: italic;*/
 		width: 70%;
 		margin: auto;
 		padding-block: 3em;
-	}
-	
-	.quote__text {
-		font-family: Spectral;
-		font-style: italic;
-		font-weight: 300;
-		font-size: 22pt;
-	}
-	
-	.quote__author {
-		font-family: Spectral;
-		font-weight: 800;
-		font-size: 22px;
-	}
-
-	#services {
-		margin: auto;
-		background-color: #A8D5D8 ;
-		position: relative;
 	}
 
 	#services .container::before{
@@ -744,11 +546,6 @@ img {
 		margin: 20px;
 		z-index: 1;
 	}
- /*
-	.service {
-		width: 300px;
-
-	}*/
 
 	.service__description{
 		margin-bottom: 1em;
@@ -770,11 +567,6 @@ img {
 		align-items: center;
 	}
 
-	#form-column1 {
-		display: flex;
-		flex-direction: column;
-	}
-
 	#question {
 		font:'Spectral';
 		font-size: 18pt;
@@ -788,37 +580,6 @@ img {
 	form {
 		width: 100%;
 	}
-
-	form input {
-		width: 100%;
-		background-color: transparent;
-		border: solid 1px;
-		height: 2.5em;
-		margin-bottom: 20px;
-	}
-	
-	form textarea {
-		width: 100%;
-		background-color: transparent;
-		border: solid 1px;
-		height: 5em;
-		line-height: 2.5em;
-		font-size: 1.2em;
-		margin-bottom: 20px;
-	}
-	
-	input[type="submit"] {
-		background-color: #BEB45A;
-		padding: .5em 1em
-	}
-
-
-
-	/*form {
-		width: 100%;
-	}*/
-
-
 }
 
 
