--- a/assets/style.css
+++ b/assets/style.css
@@ -348,7 +348,7 @@ input[type="submit"] {
 	}
 
 	.picture {
-		width: 50%;
+		width: 35%;
 		height: auto;
 		margin: 40px;
 	}
@@ -490,8 +490,8 @@ input[type="submit"] {
 		margin: 30px;
 	}
 
-	.picture.left::before, .picture.right::before {
-		width: 70%;
+	.picture {
+		width: 55%;
 		height: auto;
 	}
 
